--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,7 @@
 fastapi==0.115.6
-uvicorn[standard]==0.32.1
+uvicorn==0.32.1
 sqlalchemy==2.0.36
 psycopg2-binary==2.9.10
-pydantic==2.10.3
-pydantic-settings==2.7.0
+pydantic==2.11.1
+pydantic-settings==2.8.1
 python-dotenv==1.0.1
